--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Dominik Hable</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>
+        <title>dominik hable</title>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+        <!--link rel="icon" type="image/x-icon" href="img/icon.png" /-->
     </head>
-    <body>
-        <div id="terminal">
-            <p>dominikhable.com</p>
-        </div>
-    </body>
+    <bdoy>
+        <p>visitor@dominikhable.com~$</p>
+    </bdoy>
 </html>
