--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                            moveIt(this.value.length, event);"
                 onkeypress="typeIt(this, event);"
                 autofocus
+                maxlength="42"
             ></textarea>
             <div id="liner">
-                <span id="typer"></span><b class="cursor" id="cursor">▁</b>
+                <span id="typer"></span><b id="cursor">▁</b>
             </div>
         </div>
         <script src="js/main.js"></script>
