--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <div id="command" onclick="$('text-area').focus();">
+            <div id="terminal">
+                <a id="old"></a>
+            </div>
             <textarea
                 type="text"
                 id="text-area"
@@ -18,11 +21,12 @@
                 autofocus
                 maxlength="42"
             ></textarea>
-            <div id="liner">
-                <span id="typer"></span><b id="cursor">▁</b>
+            <div id="current">
+                <span id="input-text"></span><b id="cursor">▁</b>
             </div>
         </div>
         <script src="js/main.js"></script>
         <script src="js/magic.js"></script>
+        <script src="js/commands.js"></script>
     </body>
 </html>
